Alterando o título da toolbar para 2020 e arrumando a orientação do logo na splash activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Paulistao Karaoke</string>
 
-    <string name="title_toolbar">Paulistão Karaokê</string>
+    <string name="title_toolbar">Paulistão Karaokê 2020</string>
     <string name="title_home">Principal</string>
     <string name="title_live">Ao Vivo</string>
     <string name="title_news">Notícias</string>
